Changing prd to version 2 and adding demo-api-5 to move dev to version 3
