# openapi.json
@@ -99,6 +99,22 @@
         }
       }
     },
+    "/demo-api-5": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Get Employees"
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
+          "httpMethod": "POST",
+          "uri": {
+            "Fn::Sub": "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${EmployeeApiFunction.Arn}:${!stageVariables.lambdaAlias}/invocations"
+          }
+        }
+      }
+    },
     "/employees/{id}": {
       "parameters": [
         {
