# src/main/java/com/demo/handler/EmployeeApiHandler.java
@@ -42,6 +42,9 @@ public class EmployeeApiHandler implements RequestHandler<APIGatewayProxyRequest
                     }if("/demo-api-4".equals(path)){
                         return response(200, JsonUtil.toJson(employeeDAO.getAllEmployees()));
                     }
+                    if("/demo-api-5".equals(path)){
+                        return response(200, JsonUtil.toJson(employeeDAO.getAllEmployees()));
+                    }
                     break;
 
                 case "POST":
